End of Section 19

--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -39,7 +39,7 @@
                     </li>
                     <div class="dropdown-divider"></div>
                     <li class="py-1">
-                        <a (click)="accountService.logOut()" class="dropdown-item">
+                        <a (click)="accountService.logout()" class="dropdown-item">
                             <i class="fa fa-sign-out me-3"></i> Logout
                         </a>
                     </li>
